 2.3 (January XX, 2016)
========================
Fixed SpriteBatch with SpriteAPIs whose centers aren't actually centered
Combat asteroid renderer changes:
 - Fixed asteroids being shown when player is destroyed
Nebula renderer changes:
 - Custom campaign terrain with the tag "radar_nebula" will be drawn as nebulae

 2.2 (December 25, 2015)
=========================
Empty rows in radar CSVs are ignored correctly
Added to radar_settings.json:
 - "radarSize", determines the size of the radar as a fraction of the display
   height, defaults to 0.2 or 20% display height. Keep in mind that the radar
   adds 10% of its diameter as padding to the side/below.
 - "allyColor", the color of teammates in battle
Increased default "maxShown" settings due to optimizations to sprite rendering
Added getAlliedContactColor() to CommonRadar interface
Added isPointOnRadar() to CommonRadar interface
Added ReloadRadar console command (only if Console Commands mod is enabled)
Battle progress renderer changes:
 - Allies have their own section of the bar
Combat ship renderer changes:
 - Allied ships have their own color
New campaign renderer: NebulaRenderer
 - Handles nebula and deep hyperspace, does not show hyperspace storms yet
New optional renderer: MemoryUsageRenderer
 - Appears to the left of the radar in both campaign and combat
 - White portion of bar is fraction used of max allocatable memory
 - Gray portion of bar is fraction allocated of max allocatable memory
 - Shows heap memory on left, non-heap memory on right
   (heap is the value most users will want to keep an eye on)
 - Disabled by default, enable in the relevant CSVs in data/config/radar
New utility class: SpriteBatch
 - Aids in efficiently drawing a sprite many times in a row
Miscellaneous optimizations and improvements

 2.1 (November 19, 2015)
=========================
(thanks to MesoTroniK for spritework and extensive help testing new features)
Updated to be compatible with Starsector 0.7a